# tgimguard

./: .gitignore  README.md  env.example  main.py  pyproject.toml
rules/: prohibited.regex
