[project]
name = "tgimguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "openai>=1.51.0,<2.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pillow>=10.4.0,<11.0.0",
]
